# Aether

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proto/: android_checkin.proto  checkin.proto  mcs.proto
src/: cli.rs  config.rs  db,rs  error.rs  listener.rs  main.rs  push.rs  twitter.rs
src/fcm/: checkin.rs  firebase.rs  mcs.rs  mod.rs  register.rs
